Fix spacing/padding

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  min-height: 100%;
+  height: 100%;
 }
 
 header {
@@ -31,6 +31,12 @@ header h3 {
 header button {
   position: absolute;
   right: 5px;
+  background: blue;
+  border: none;
+  color: white;
+  width: 100px;
+  height: 35px;
+  margin-right: 10px;
 }
 
 .week-banner {
@@ -44,6 +50,8 @@ header button {
   color: white;
   font-size: 30px;
   margin-bottom: 10px;
+  padding-top: 15px;
+  margin-left: 20px;
   height: 40px;
   font-weight: 700;
 }
